kadai_008の内容を修正

--- a/kadai_008/kadai3.ipynb
+++ b/kadai_008/kadai3.ipynb
@@ -16,36 +16,36 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 86,
       "metadata": {
         "id": "-nIMEAymm4qy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9762b770-bfda-4ff1-f666-a4d6a06d1bb2"
+        "outputId": "5460b902-199a-4ac8-f158-f08b69319670"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fizz\n"
+            "Buzz\n"
           ]
         }
       ],
       "source": [
         "import random\n",
         "\n",
-        "var=random.randint(1, 30)\n",
+        "var=random.randint(1,46)\n",
         "\n",
-        "if var%3==0:\n",
-        "  print(\"Fizz\")\n",
+        "if var%3==0 and var%5==0:\n",
+        "  print(\"FizzBuzz\")\n",
         "\n",
         "elif var%5==0:\n",
         "  print(\"Buzz\")\n",
         "\n",
-        "elif var%15==0:\n",
-        "  print(\"FizzBuzz\")\n",
+        "elif var%3==0:\n",
+        "  print(\"Fizz\")\n",
         "\n",
         "else:\n",
         "  print(var)"
