--- a/kadai_013/kadai5.ipynb
+++ b/kadai_013/kadai5.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kxfiTHYB7fIR",
-        "outputId": "c89be4c6-5dd7-4706-be76-e7ce9020121a"
+        "outputId": "dccc02d7-e499-416b-b1db-f2e4e9f3b2cc"
       },
       "outputs": [
         {
@@ -34,11 +34,13 @@
         }
       ],
       "source": [
-        "def merchandise(price,tax):\n",
-        "  sum=price*(1+tax/100)\n",
-        "  print(f\"{sum}円\")\n",
         "\n",
-        "merchandise(2500,10)"
+        "def calculate_product(price):\n",
+        "\n",
+        "  total=price*(1+10/100)\n",
+        "  print(f\"{total}円\")\n",
+        "\n",
+        "calculate_product(2500)"
       ]
     }
   ]
