--- a/kadai_013/kadai5.ipynb
+++ b/kadai_013/kadai5.ipynb
@@ -16,31 +16,17 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kxfiTHYB7fIR",
-        "outputId": "dccc02d7-e499-416b-b1db-f2e4e9f3b2cc"
+        "id": "kxfiTHYB7fIR"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2750.0円\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "def calculate_product(price,tax=10):\n",
         "\n",
-        "def calculate_product(price):\n",
-        "\n",
-        "  total=price*(1+10/100)\n",
-        "  print(f\"{total}円\")\n",
-        "\n",
-        "calculate_product(2500)"
+        "  total=price*(1+tax/100)\n",
+        "  return total\n",
+        "\n"
       ]
     }
   ]
