--- a/kadai_013/kadai5.ipynb
+++ b/kadai_013/kadai5.ipynb
@@ -16,17 +16,33 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {
-        "id": "kxfiTHYB7fIR"
+        "id": "kxfiTHYB7fIR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7504dbd-823e-4f1d-d591-e56c49df4554"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2750.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ],
       "source": [
-        "def calculate_product(price,tax=10):\n",
+        "def calculate_product(price=2500,tax=10):\n",
         "\n",
-        "  total=price*(1+tax/100)\n",
-        "  return total\n",
-        "\n"
+        "    total=price*(1+tax/100)\n",
+        "    return total\n",
+        "\n",
+        "calculate_product()"
       ]
     }
   ]
