kadai5の内容を三度訂正

--- a/kadai_013/kadai5.ipynb
+++ b/kadai_013/kadai5.ipynb
@@ -16,28 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
-        "id": "kxfiTHYB7fIR",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f7504dbd-823e-4f1d-d591-e56c49df4554"
+        "id": "kxfiTHYB7fIR"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2750.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ],
+      "outputs": [],
       "source": [
-        "def calculate_product(price=2500,tax=10):\n",
+        "def calculate_product(price,tax=10):\n",
         "\n",
         "    total=price*(1+tax/100)\n",
         "    return total\n",
