kadai_015の内容を修正

--- a/kadai_015/kadai7.ipynb
+++ b/kadai_015/kadai7.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BjgJDqTPYieY",
-        "outputId": "56a440da-c1be-43aa-9da2-330832767687"
+        "outputId": "7d3a039c-05a6-4fa7-bb59-69fe2c49371b"
       },
       "outputs": [
         {
@@ -40,21 +40,19 @@
         "    self.name=\"\"\n",
         "    self.age=\"\"\n",
         "\n",
-        "  def printinfo(self,name,age):\n",
+        "  def printinfo(self,name):\n",
         "    self.name=name\n",
-        "    self.age=age\n",
-        "\n",
-        "  def show_name(self):\n",
         "    print(self.name)\n",
         "\n",
-        "  def show_age(self):\n",
+        "  def printinfo(self,age):\n",
+        "    self.age=age\n",
         "    print(self.age)\n",
         "\n",
         "ningen=Human()\n",
         "\n",
-        "ningen.printinfo(\"渡辺太郎\",41)\n",
-        "ningen.show_name()\n",
-        "ningen.show_age()\n"
+        "ningen.printinfo(\"渡辺太郎\")\n",
+        "ningen.printinfo(41)\n",
+        "\n"
       ]
     }
   ]
